--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
