feat: Implement Login feature (#19)
* feat: add LeftSideBar component

* feat: add RightCommentBar

* chore: resolve ci issue

* feat: add BlogCard

* refactor: remove useless style

* feat: add Layout container

* feat: add responsive layout style

* feat: add window event listener

* refactor: improve responsive layout style

* refactor: improve responsive layout style

* feat: add new styles

* feat: add button component

* refactor: modify blog-card style

* feat: add comment box component

* feat: add icon component

* feat: add new icons

* feat: add BlogPage

* refactor: add home icon

* refactor: modify blog-card style

* feat: add MainPage and Typography component

* feat: add introduction

* feat: add FavoritePage

* feat: add BlogList component

* feat: implement BlogDetailPage screen

* feat: implement BlogDetail api routes

* chore: modify mock data

* refactor: modify blog styles

* feat: add create icon

* feat: add BlogCreatePage screen

* feat: add MarkdownPreview

* feat: improve and rename markdown component

* feat: add Input component

* feat: add Textarea component

* feat: add Link tag

* feat: implement LoginForm

* feat: add supabase settings

* feat: add SessionProvider and add zustand package

* feat: implement logout feature

* refactor: apply image precessing based on login status

* refactor: add user info nickname

---------

Co-authored-by: KHS <khs@KHSui-MacBookPro-2.local>

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.2",
@@ -20,7 +21,8 @@
     "react-dom": "^18",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
