--- a/package.json
+++ b/package.json
@@ -10,24 +10,29 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dompurify": "^3.1.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-unused-imports": "^4.1.3",
+    "marked": "^14.1.3",
     "next": "14.2.11",
     "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "tailwind-merge": "^2.5.2",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
