--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
   "prettier.configPath": ".prettierrc.js",
   "cSpell.words": [
     "clsx",
+    "Dragbar",
     "ellipsize",
     "gacha",
     "Imessage",
