refactor: improve Blog features (#42)
* fix: favorite features

* refactor: improve BlogPage

* refactor: apply server side fetch

* refactor: apply server side fetch

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* fix: fix build issue

* refactor: restore wrong changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
   "typescript.preferences.importModuleSpecifier": "non-relative",
   "prettier.configPath": ".prettierrc.js",
   "cSpell.words": [
+    "apikey",
     "clsx",
     "Dragbar",
     "ellipsize",
